apps/salesforce/force-app/main/default/objects/DocEngine_Document__c/DocEngine_Document__c.object-meta.xml
<CustomObject>
    <description>Filled DocEngine document linked to a Salesforce record (polymorphic via Record_Id__c).</description>
    <label>DocEngine Document</label>
    <nameField>
        <displayFormat>DOC-{00000}</displayFormat>
        <label>Document Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocEngine Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>