apps/salesforce/force-app/main/default/objects/DocEngine_Document__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Set when Status moves to Completed.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>