apps/salesforce/force-app/main/default/objects/DocEngine_Document__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description>ContentDocument Id of the attached PDF/HTML file. Updated in place when the document is re-saved.</description>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>