apps/salesforce/force-app/main/default/objects/DocEngine_Document__c/fields/Document_JSON__c.field-meta.xml
<CustomField>
    <fullName>Document_JSON__c</fullName>
    <description>Values-only exportFields() JSON (kind: field). Structure/mapping come from Template_Version__c. Legacy full document JSON is still accepted on reopen.</description>
    <label>Document JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>