apps/salesforce/force-app/main/default/objects/DocEngine_Document__c/fields/File_URL__c.field-meta.xml
<CustomField>
    <fullName>File_URL__c</fullName>
    <description>Lightning preview URL for the attached ContentDocument.</description>
    <formula>IF(
  ISBLANK(Content_Document_Id__c),
  NULL,
  HYPERLINK(
    &quot;/lightning/r/ContentDocument/&quot; &amp; Content_Document_Id__c &amp; &quot;/view&quot;,
    &quot;Preview&quot;,
    &quot;_blank&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>File</label>
    <type>Text</type>
</CustomField>