apps/salesforce/force-app/main/default/objects/DocEngine_Document__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Denormalized object API name of the source record (for reporting/filtering).</description>
    <externalId>true</externalId>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>