apps/salesforce/force-app/main/default/objects/DocEngine_Document__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>18-character Id of the source Salesforce record (polymorphic link).</description>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>