apps/salesforce/force-app/main/default/objects/DocEngine_Document__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Source template that produced this document.</description>
    <label>Template</label>
    <referenceTo>DocEngine_Template__c</referenceTo>
    <relationshipLabel>DocEngine Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>