apps/salesforce/force-app/main/default/objects/DocEngine_Document__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Pinned template version used when this document was filled. Stable across later template edits.</description>
    <label>Template Version</label>
    <referenceTo>DocEngine_Template_Version__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>